--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,259 @@
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644569880962/work
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1631874778482/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-Bottleneck @ file:///C:/ci/bottleneck_1648029106781/work
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==2.2.0
+anaconda-project==0.8.3
+asn1crypto==0.24.0
+astroid==2.2.5
+astropy==3.2.1
+atomicwrites==1.3.0
+attrs==19.1.0
+Babel==2.7.0
+backcall==0.1.0
+backports.functools-lru-cache==1.5
+backports.os==0.1.1
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+beautifulsoup4==4.7.1
+bitarray==0.9.3
+bkcharts==0.2
+bleach==3.1.0
+bokeh==1.2.0
+boto==2.49.0
+Bottleneck==1.2.1
+brewer2mpl==1.4.1
 Brotli==1.0.9
 brotlipy==0.7.0
+category-encoders==2.4.0
 certifi==2022.5.18.1
-cffi @ file:///C:/ci_310/cffi_1643360863105/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
+cffi==1.12.3
+chardet==3.0.4
+charset-normalizer==2.0.4
+Click==7.0
 click-plugins==1.1.1
 cligj==0.7.2
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cryptography @ file:///C:/ci_310_32/cryptography_1643288562308/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+cloudpickle==1.2.1
+clyent==1.2.2
+colorama==0.4.1
+comtypes==1.1.7
+conda==4.13.0
+conda-build==3.21.9
+conda-content-trust==0+unknown
+conda-package-handling==1.3.11
+conda-repo-cli==1.0.4
+conda-token==0.3.0
+conda-verify==3.4.2
+contextlib2==0.5.5
+cryptography==3.4.7
+cycler==0.10.0
+Cython==0.29.12
+cytoolz==0.10.0
 dash==2.4.1
 dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-renderer==1.1.2
 dash-table==5.0.0
-debugpy @ file:///C:/ci/debugpy_1637073814272/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-descartes @ file:///Users/ktietz/demo/mc3/conda-bld/descartes_1630659560270/work
-entrypoints @ file:///C:/ci/entrypoints_1649926676781/work
-fastjsonschema @ file:///tmp/build/80754af9/python-fastjsonschema_1620414857593/work/dist
+dask==2.1.0
+decorator==4.4.0
+defusedxml==0.6.0
+descartes==1.1.0
+distributed==2.1.0
+docutils==0.14
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+filelock==3.0.12
 Fiona==1.8.4
-Flask @ file:///opt/conda/conda-bld/flask_1648041541647/work
+Flask==1.1.1
 Flask-Compress==1.5.0
-fonttools==4.25.0
-future==0.18.2
+fsspec==2022.3.0
+future==0.17.1
 GDAL==2.3.3
 geopandas==0.6.1
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1648562630459/work
-importlib-resources @ file:///tmp/build/80754af9/importlib_resources_1625135880749/work
-ipykernel @ file:///C:/ci/ipykernel_1646982783083/work/dist/ipykernel-6.9.1-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1643818352557/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jedi @ file:///C:/ci/jedi_1644315424739/work
-Jinja2 @ file:///opt/conda/conda-bld/jinja2_1647436528585/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-jsonschema @ file:///C:/ci/jsonschema_1650008061654/work
-jupyter-client @ file:///C:/ci/jupyter_client_1650534193597/work
-jupyter-core @ file:///C:/ci/jupyter_core_1651656241651/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-kiwisolver @ file:///C:/ci/kiwisolver_1653292407017/work
-MarkupSafe @ file:///C:/ci/markupsafe_1621528518793/work
-matplotlib @ file:///C:/ci/matplotlib-suite_1647441845039/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
+gevent==1.4.0
+ggplot==0.11.5
+glob2==0.7
+greenlet==0.4.15
+gunicorn==20.1.0
+h5py==2.9.0
+heapdict==1.0.0
+html5lib==1.0.1
+idna==2.8
+imageio==2.5.0
+imagesize==1.1.0
+imbalanced-learn==0.9.0
+imblearn==0.0
+importlib-metadata==0.17
+ipykernel==5.1.1
+ipython==7.6.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.0
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.13.3
+Jinja2==2.10.1
+joblib==0.13.2
+json5==0.8.4
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.3.1
+jupyter-console==6.0.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.5.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab==1.0.2
+jupyterlab-server==1.0.0
+keyring==18.0.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.1
+libarchive-c==2.8
+llvmlite==0.29.0
+locket==0.2.0
+lxml==4.3.4
+MarkupSafe==1.1.1
+matplotlib==3.1.0
+mccabe==0.6.1
+menuinst==1.4.16
+missingno==0.5.1
 mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186182548/work
-mkl-service==2.4.0
-munch @ file:///Users/ktietz/demo/mc3/conda-bld/munch_1630566382504/work
-munkres==1.1.4
-nbclient @ file:///C:/ci/nbclient_1650308589784/work
-nbconvert @ file:///C:/ci/nbconvert_1649759211040/work
-nbformat @ file:///C:/ci/nbformat_1649826934963/work
-nest-asyncio @ file:///C:/ci/nest-asyncio_1649848135795/work
-notebook @ file:///C:/ci/notebook_1651666867639/work
-numexpr @ file:///C:/ci/numexpr_1640686198111/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1650941124152/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/ci/pandas_1641461335688/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+mkl-fft==1.0.12
+mkl-random==1.0.2
+mkl-service==2.0.2
+mock==3.0.5
+more-itertools==7.0.0
+mpmath==1.1.0
+msgpack==0.6.1
+multipledispatch==0.6.0
+munch==2.5.0
+navigator-updater==0.2.1
+nbconvert==5.5.0
+nbformat==4.4.0
+networkx==2.3
+nltk==3.4.4
+nose==1.3.7
+notebook==6.0.0
+numba==0.44.1
+numexpr==2.6.9
+numpy==1.21.6
+numpydoc==0.9.1
+olefile==0.46
+openpyxl==2.6.2
+packaging==19.0
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.5.0
+partd==1.0.0
+path.py==12.0.1
+pathlib2==2.3.4
+patsy==0.5.1
+pep8==1.7.1
+pickleshare==0.7.5
 Pillow==9.0.1
-plotly @ file:///opt/conda/conda-bld/plotly_1646671701182/work
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyproj==1.9.6
-pyrsistent @ file:///C:/ci/pyrsistent_1636111449228/work
-PySocks @ file:///C:/ci/pysocks_1605287715206/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz==2021.3
-pywin32==302
-pywinpty @ file:///C:/ci_310/pywinpty_1644239306009/work/target/wheels/pywinpty-2.0.2-cp37-none-win32.whl
+pkginfo==1.5.0.1
+plotly==5.6.0
+pluggy==0.12.0
+ply==3.11
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
+psutil==5.8.0
+py==1.8.0
+py4j==0.10.9.3
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.3
+pyflakes==2.1.1
+Pygments==2.4.2
+PyJWT==2.1.0
+pylint==2.3.1
+pyodbc==4.0.26
+pyOpenSSL==19.0.0
+pyparsing==2.4.0
+pyproj==3.2.1
+pyreadline==2.1
+pyrsistent==0.14.11
+pyshp==2.1.3
+PySocks==1.7.0
+pyspark==3.2.1
+pytest==5.0.1
+pytest-arraydiff==0.3
+pytest-astropy==0.5.0
+pytest-doctestplus==0.3.0
+pytest-openfiles==0.3.2
+pytest-remotedata==0.3.1
+python-dateutil==2.8.0
+pytz==2019.1
+PyWavelets==1.0.3
+pywin32==223
+pywinpty==0.5.5
 PyYAML==6.0
-pyzmq @ file:///C:/ci/pyzmq_1638417007228/work
-requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
-Rtree @ file:///C:/ci/rtree_1618421002230/work
-scikit-learn @ file:///C:/ci/scikit-learn_1642617305109/work
-scipy @ file:///C:/ci_310/scipy_1644006742166/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+pyzmq==18.0.0
+QtAwesome==0.5.7
+qtconsole==4.5.1
+QtPy==1.8.0
+requests==2.27.1
+rope==0.14.0
+Rtree==0.9.7
+ruamel-yaml-conda==0.15.100
+scikit-image==0.15.0
+scikit-learn==1.0.2
+scipy==1.3.0
+seaborn==0.9.0
+Send2Trash==1.5.0
 Shapely==1.6.4.post1
-sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
-tenacity @ file:///C:/ci/tenacity_1632759489732/work
-terminado @ file:///C:/ci/terminado_1644304591822/work
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tornado @ file:///C:/ci/tornado_1606944352773/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
-urllib3 @ file:///C:/ci/urllib3_1650639883551/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.16.0
+sklearn==0.0
+snowballstemmer==1.9.0
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.8
+spark-nlp==3.4.4
+sparknlp==1.0.0
+Sphinx==2.1.2
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.1.2
+spyder==3.3.6
+spyder-kernels==0.5.1
+SQLAlchemy==1.3.5
+statsmodels==0.10.0
+sympy==1.4
+tables==3.5.2
+tblib==1.4.0
+tenacity==8.0.1
+terminado==0.8.2
+testpath==0.4.2
+threadpoolctl==3.1.0
+toolz==0.10.0
+tornado==6.0.3
+tqdm==4.32.1
+traitlets==4.3.2
+ujson==5.1.0
+unicodecsv==0.14.1
+urllib3==1.26.9
+wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605299180674/work
+Werkzeug==0.15.4
+widgetsnbextension==3.5.0
+win-inet-pton==1.1.0
+win-unicode-console==0.5
 wincertstore==0.2
-zipp @ file:///C:/ci/zipp_1652255911371/work
+wrapt==1.11.2
+xlrd==1.2.0
+XlsxWriter==1.1.8
+xlwings==0.15.8
+xlwt==1.3.0
+zict==1.0.0
+zipp==0.5.1
